# 26-practical

ImplementatioOfAnAudioplayerSimulation/: CMakeLists.txt
ImplementatioOfAnAudioplayerSimulation/include/: audio-player.h
ImplementatioOfAnAudioplayerSimulation/source/: CMakeLists.txt  audio-player.cpp  main.cpp
ImplementationOfTheDesktopWindowManagementProgram/: CMakeLists.txt
ImplementationOfTheDesktopWindowManagementProgram/include/: window.h
ImplementationOfTheDesktopWindowManagementProgram/source/: CMakeLists.txt  main.cpp
ImplementationOfTheMobilePhoneSimulationProgram/: CMakeLists.txt
ImplementationOfTheMobilePhoneSimulationProgram/include/: phone.h
ImplementationOfTheMobilePhoneSimulationProgram/source/: CMakeLists.txt  main.cpp
